RESOLVED FIXED 243742
REGRESSION(css-values-4 viewport units): Safari window resizing is glitchy on apple.com
https://bugs.webkit.org/show_bug.cgi?id=243742
Summary REGRESSION(css-values-4 viewport units): Safari window resizing is glitchy on...
Devin Rousso
Reported 2022-08-09 12:41:13 PDT
.
Attachments
Devin Rousso
Comment 1 2022-08-09 12:41:26 PDT
Devin Rousso
Comment 2 2022-08-09 12:43:14 PDT
EWS
Comment 3 2022-08-09 16:55:14 PDT
Committed 253277@main (3f73c9df6794): <https://commits.webkit.org/253277@main> Reviewed commits have been landed. Closing PR #3162 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.