Cherry-pick 3f73c9df6794. rdar://problem/98155377

REGRESSION(css-values-4 viewport units): Safari window resizing is glitchy on apple.com
    https://bugs.webkit.org/show_bug.cgi?id=243742
    <rdar://problem/98155377>

    Reviewed by Tim Horton.

    * Source/WebCore/page/FrameView.cpp:
    (WebCore::FrameView::clearSizeOverrideForCSSDefaultViewportUnits):
    (WebCore::FrameView::setOverrideSizeForCSSDefaultViewportUnits):
    (WebCore::FrameView::clearSizeOverrideForCSSSmallViewportUnits):
    (WebCore::FrameView::setOverrideSizeForCSSSmallViewportUnits):
    (WebCore::FrameView::clearSizeOverrideForCSSLargeViewportUnits):
    (WebCore::FrameView::setOverrideSizeForCSSLargeViewportUnits):
    Replace `didChangeStyleSheetEnvironment` with `updateViewportUnitsOnResize` as the latter only
    affects styles/nodes that actually use viewport units, whereas the former recalculates everything.

    Canonical link: https://commits.webkit.org/253277@main

Canonical link: https://commits.webkit.org/252432.204@safari-7614-branch